# semantic-layer-bot

./: .env.example  .gitignore  README.md  agent.py  demo.ipynb  ingest.py  pyproject.toml  semantic_manifest.yaml
